--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,23 @@
 *{
-    background-color: orangered;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color:bisque;
+
 }
+
+body{
+    background-color:bisque;
+
+}
+
+div{
+    width: 75vw;
+    margin: 2px auto; 
+}
+
+@media only screen and (max-width: 600px) {
+   textarea{
+       width: 100%;
+   }
+  }
