--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Demo</title>
     <link rel="stylesheet" href="/style.css">
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 <body>
     
-    <form action="/" method="post">
+    <!-- <form action="/" method="post">
         <label for="fname">First name</label>
         <input type="text" name="fname"> <br> <br>
         <label for="lname">Last name</label>
@@ -21,7 +23,39 @@
         <label for="msg">MSG: </label>
         <textarea name="msg" id="" cols="30" rows="10"></textarea>
         <button type="submit">Submit</button>
-    </form>
+    </form> -->
+    <div>
+    <form action="/" method="post">
+        <div class="mb-3" >
+          <label for="fname" class="form-label">First Name</label>
+          <input type="text" class="form-control" name="fname" id="fname" aria-describedby="emailHelp">
+        </div>
+        <div class="mb-3">
+            <label for="lname" class="form-label">Last Name</label>
+            <input type="text" class="form-control" name="lname" aria-describedby="emailHelp">
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Email address</label>
+            <input type="email" class="form-control" name="email" aria-describedby="emailHelp">
+            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+          </div>
+          <div class="mb-3">
+            <label for="mob" class="form-label">Mobile</label>
+            <input type="number" class="form-control" name="mob" id="mob" aria-describedby="emailHelp">
+          </div>
+          <div class="mb-3">
+            <label for="msg">MSG: </label> <br>
+            <textarea name="msg" id="" cols="100" rows="10"></textarea>
+          </div>
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>        
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
 
+      <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
