--- a/public/style.css
+++ b/public/style.css
@@ -2,12 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color:bisque;
+    background-color:rgb(243, 213, 176);
 
 }
 
 body{
-    background-color:bisque;
 
 }
 
